--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
               </div>
             </div>
             <div class="col-md-2">
-              <img  (click)="updateTo();updateFrom()" src="assets/image/download.png" id="flipper">
+              <img  (click)="updateTo();updateFrom()" src="assets/download.png" id="flipper">
 
             </div>
             <div class="col-md-5">
